# Space-World

./: .env.example  .gitignore  DRIFT_3D_Presentation.pptx  DRIFT_architecture_v2.md  README.md  RESEARCH_ROADMAP.md  ROADMAP.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
deck/: build.js  build_pdf.js  package-lock.json  package.json
eval/: run.mjs
research/: E1_frame_pipeline.md  README.md  RELEASE.md  REPORT.md  a1_benchmark.py  a2_ablation.py  a3_benchmark.py  baselines.py  build_dataset.py  d2_curriculum.py  e1_coupling.py  e2_faithfulness.py  gen_ref.mjs  leaderboard.json  parity_ref.json  pyproject.toml  requirements.txt  run_all.py  test_env.py  test_parity.py  train.py  train_pixel.py
research/data/: DATASHEET.md  manifest.json  test.jsonl  val.jsonl
research/drift_env/: __init__.py  corpus.py  dataset.py  dynamics.py  env.py  flight.py  gym_env.py  instructions.py  metrics.py  physics.py  policies.py  reward.py  rng.py  scenarios.py  simulation.py
research/results/: leaderboard.json
server/: build_vendor.mjs  proxy.js
src/: agent.js  audio.js  benchmark.worker.js  campaign.js  conjunction.js  control_authority.js  dynamics.js  ep_model.js  flight_model.js  frame_grabber.js  orchestrator.js  overlay.js  physics.js  physics_viz.js  pixel_sense.js  policies.js  reactor_record.js  rng.js  scenarios.js  scene3d.js  simulation.js  telemetry.js  tle.js  vlm_sense.js  world_client.js
test/: campaign.test.mjs  dynamics.test.mjs  multithreat.test.mjs  physics.test.mjs  tle.test.mjs
